syntax = "proto3";

package observer.api;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "elysium.com/applications/observer/api;api";

// Observer ...
service Observer {

  rpc Entry(EntryRequest) returns (EntryResponse) {
    option (google.api.http) = {
      post: "/api/v1/entry"
      body: "*"
    };
  }

  rpc ViewStream(ViewStreamRequest) returns (stream ViewStreamResponse) {
    option (google.api.http) = {
      get: "/api/v1/view/{session}"
    };
  }
}

message EntryRequest {
  string current_session = 1;
  string previous_session = 2;
}

message EntryResponse {
  int32 code = 1;
  string message = 2;
}

message ViewStreamRequest {
  string session = 1;
}

message ViewStreamResponse {
  int64 view = 1;
}